Fix RSVP styles on mobile

--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -184,14 +184,22 @@
 
 /* Summary */
 .form__guest-summary {
-    margin: 3rem;
+    margin: 1rem 1rem;
+
+    @include breakpoint(medium) {
+        margin: 3rem;
+    }
 }
 
 /* Guest */
 .guest {
     background-color: #fff;
-    padding: 1.6rem 2.5rem 1rem;
+    padding: 1.6rem 1rem 1rem;
     margin: .5rem 0;
+
+    @include breakpoint(medium) {
+        padding: 1.6rem 2.5rem 1rem;
+    }
 }
 
 .guest + .guest {
@@ -227,13 +235,18 @@
 .guest__choice-icon {
     margin-left: 2px;
     margin-right: 15px;
+    overflow: visible;
 }
 
 /* Result */
 .form__result {
-    margin: 3rem;
+    margin: 1rem;
     padding: 1rem;
     background-color: #fff;
+
+    @include breakpoint(medium) {
+        margin: 3rem;
+    }
 }
 
 .result__emoji {
@@ -254,7 +267,12 @@
 .result__guest-list {
     border-top: 1px solid #A2C3D4;
     padding: 1rem 0 0;
-    margin: 0 5rem 2rem;
+    margin: 0 1rem 2rem;
+
+    @include breakpoint(medium) {
+        padding: 1rem 0 0;
+        margin: 0 5rem 2rem;
+    }
 }
 
 .result__guest-item {
